# sftp-helper

./: .gitignore  CHANGELOG.md  Dockerfile  EXAMPLES.md  GUI.md  LANDSCAPE.md  LISEZMOI.md  PAYSAGE.md  README.md  TRIGGERS.md  continue.md  environment.yml  manual_poetry.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  sftp_config.json.example  sftp_config.yaml.example
.github/workflows/: ci.yml
assets/: landscape.csv  manual_poetry.sh  paysage.csv
sftp_helper/: __init__.py  api.py  cli_argparse.py  cli_click.py  main.py  mcp.py
skills/: README.md
skills/sftp-helper/: SKILL.md
skills/sftp-helper/references/: cli-reference.md  config.md  surfaces.md  triggers.md
tests/: test_api.py  test_cli.py  test_mcp.py  test_sftp_helper.py
