[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "sftp-helper"
version = "2.1.0"
description = "SFTP Helper: utility functions for working with SFTP servers via paramiko."
readme = "README.md"
requires-python = ">=3.10,<3.14"
authors = [
    {name = "Warith HARCHAOUI", email = "warithmetics@deraison.ai"},
]
dynamic = ["dependencies"]

[project.optional-dependencies]
dev = ["pytest>=7", "pyyaml>=6"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
include = ["sftp_helper*"]
exclude = ["tests*"]
