[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sftp-helper"
version = "2.3.0"
description = "SFTP Helper — utility functions for working with SFTP servers via paramiko, exposed as library, argparse CLI, click CLI, FastAPI HTTP surface and MCP tools. Strict host-key verification, credentials loader, upload / download / list / remove / exists / remote_tempfile context manager."
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = {text = "BSD-3-Clause"}
authors = [
    {name = "Warith HARCHAOUI", email = "warithmetics@deraison.ai"},
]
keywords = ["sftp", "paramiko", "ssh", "file-transfer", "secure"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: File Transfer Protocol (FTP)",
    "Topic :: System :: Networking",
]
dependencies = [
    "os-helper>=1.5.3",
    "paramiko>=3.0,<4",
]

[project.optional-dependencies]
# CLI-only-with-click extra. argparse variant needs no runtime dep and
# is always available.
cli = ["click>=8.1,<9"]
# FastAPI HTTP surface (sftp_helper.api). uvicorn + python-multipart
# so multipart file uploads work out of the box.
api = [
    "fastapi>=0.111,<1",
    "uvicorn>=0.30,<1",
    "python-multipart>=0.0.9,<1",
]
# MCP surface (sftp_helper.mcp). Depends on the `api` extra
# — fastapi-mcp wraps the FastAPI app.
mcp = [
    "fastapi-mcp>=0.3,<1",
    "fastapi>=0.111,<1",
    "uvicorn>=0.30,<1",
    "python-multipart>=0.0.9,<1",
]
# `dev` keeps the bar low for CI — pytest + httpx (for FastAPI TestClient)
# + click (so the click CLI import always resolves in tests) + pyyaml
# (used by the credentials tests to write YAML configs).
dev = [
    "pytest>=8",
    "pyyaml>=6",
    "httpx>=0.27",
    "click>=8.1,<9",
    "fastapi>=0.111,<1",
    "python-multipart>=0.0.9,<1",
    "fastapi-mcp>=0.3,<1",
]

[project.scripts]
# argparse-based CLI — no runtime dep beyond stdlib + core package.
sftp-helper = "sftp_helper.cli_argparse:main"
# click-based twin — install with [cli] extra.
sftp-helper-click = "sftp_helper.cli_click:cli"
# MCP server (over FastAPI) — install with [api,mcp] extras.
sftp-helper-mcp = "sftp_helper.mcp:main"

[project.urls]
Homepage = "https://github.com/warith-harchaoui/sftp-helper"
Issues = "https://github.com/warith-harchaoui/sftp-helper/issues"

[tool.setuptools.packages.find]
include = ["sftp_helper*"]
exclude = ["tests*", "assets*"]

[tool.pytest.ini_options]
markers = [
    "integration: tests that hit a real SFTP server (skipped by default)",
]
addopts = "-m 'not integration'"

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["assets", "tests"]

[tool.ruff.lint]
# Conservative starter set: pyflakes (F), pycodestyle errors (E), warnings (W),
# isort (I), bugbear (B), comprehensions (C4), pyupgrade (UP), simplify (SIM).
# Easy to tighten later; this is the baseline.
select = ["E", "F", "W", "I", "B", "C4", "UP", "SIM"]
ignore = [
    "E501",  # line-too-long — handled by formatter / context-dependent
    "B008",  # function call in argument default — too noisy for our style
    "SIM108",  # ternary preferred over if/else — sometimes hurts readability
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]  # assert False in pytest is fine
